[tool.poetry]
name = "fastapitest"
version = "0.1.0"
description = ""
authors = ["pontaryagin <ponta1496@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
pandas = "^2.2.3"
fastapi = {extras = ["all"], version = "^0.115.5"}
pyinstaller = "^6.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
